// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 48px;
  height: 48px;
  border-width: 0.125rem;
  font-size: 1.375rem;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
}

@media (min-width:47.94rem) {
  .c0 {
    width: 60px;
    height: 60px;
    font-size: 1.875rem;
  }
}

<button
  className="c0"
/>
`;

exports[`UnvoteButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 48px;
  height: 48px;
  border-width: 0.125rem;
  font-size: 1.375rem;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
  color: rgb(255,255,255);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
}

@media (min-width:47.94rem) {
  .c0 {
    width: 60px;
    height: 60px;
    font-size: 1.875rem;
  }
}

<button
  className="c0"
/>
`;

exports[`VoteButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 48px;
  height: 48px;
  border-width: 0.125rem;
  font-size: 1.375rem;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
  background-color: rgb(255,255,255);
}

.c0:focus,
.c0:active {
  color: rgb(255,255,255);
}

@media (min-width:47.94rem) {
  .c0 {
    width: 60px;
    height: 60px;
    font-size: 1.875rem;
  }
}

<button
  className="c0"
/>
`;
